<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey_2"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="1dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/feedback_item"
                        android:orientation="horizontal"
                        style="@style/ScrollViewListItem">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_feedback_black_24dp"
                            android:layout_marginRight="16dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback"
                            android:textSize="16sp"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dark_mode_item"
                        android:orientation="horizontal"
                        style="@style/ScrollViewListItem">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_brightness_2_black_24dp"
                            android:layout_marginRight="16dp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dark_mode"
                            android:textSize="16sp"
                            android:layout_gravity="center_vertical"/>

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/dark_mode_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/settings_item"
                        android:orientation="horizontal"
                        style="@style/ScrollViewListItem">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_settings_black_24dp"
                            android:layout_marginRight="16dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/settings"
                            android:textSize="16sp"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/info_item"
                        android:orientation="horizontal"
                        style="@style/ScrollViewListItem">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_info_black_24dp"
                            android:layout_marginRight="16dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about"
                            android:textSize="16sp"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>